--- a/_includes/sc/schedule.html
+++ b/_includes/sc/schedule.html
@@ -17,7 +17,9 @@
       <tr> <td>4:00</td>  <td>Wrap-up</td> </tr>
     </table>
   </div>
-  
+</div.>  
+
+<div class="row">
   <div class="col-md-6">
     <h3>Day 3</h3>
     <table class="table table-striped">
